Resolves: tdf#93386 crash when closing a Database with macro editor open

Change-Id: Id3ecee744cb10f539f2b57e83a4b6e4c7744d3d5
(cherry picked from commit 9a0fd9c7f424fb787e1fae2113f0a42f0895a1e9)